force-app/main/default/objects/Media__c/fields/Asset_Size__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size__c</fullName>
    <label>Asset Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>