force-app/main/default/objects/Media__c/fields/Asset_Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Asset_Unit_of_Measurement__c</fullName>
    <label>Asset Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>Pixels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>