force-app/main/default/objects/Media__c/fields/Asset_Width__c.field-meta.xml
<CustomField>
    <fullName>Asset_Width__c</fullName>
    <label>Asset Width</label>
    <length>16</length>
    <type>Text</type>
</CustomField>