force-app/main/default/objects/Media__c/fields/Available_Asset_Size__c.field-meta.xml
<CustomField>
    <fullName>Available_Asset_Size__c</fullName>
    <label>Available Asset Size</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>