force-app/main/default/objects/Media__c/fields/Average_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Average_Impressions__c</fullName>
    <label>Average Impressions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>