force-app/main/default/objects/Media__c/fields/Contracting_Process__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Process__c</fullName>
    <label>Contracting Process</label>
    <type>TextArea</type>
</CustomField>