force-app/main/default/objects/Media__c/fields/Cost_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Run__c</fullName>
    <label>Cost Per Run</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>