force-app/main/default/objects/Media__c/fields/Creative_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Creative_Due_Date__c</fullName>
    <label>Creative Due Date</label>
    <type>Date</type>
</CustomField>