force-app/main/default/objects/Media__c/fields/Creative_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Creative_File_Link__c</fullName>
    <label>Creative File Link</label>
    <type>Url</type>
</CustomField>