force-app/main/default/objects/Media__c/fields/Creative_Policy__c.field-meta.xml
<CustomField>
    <fullName>Creative_Policy__c</fullName>
    <label>Creative Policy</label>
    <type>TextArea</type>
</CustomField>