force-app/main/default/objects/Media__c/fields/Is_this_a_special_edition_placement__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_special_edition_placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a special edition placement?</label>
    <type>Checkbox</type>
</CustomField>