force-app/main/default/objects/Media__c/fields/Lead_Campus_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Campus_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Campus Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media</relationshipLabel>
    <relationshipName>RBMediaPlacements</relationshipName>
    <type>Lookup</type>
</CustomField>