force-app/main/default/objects/Media__c/fields/Length_of_Run__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Run__c</fullName>
    <label>Length of Run</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Time</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>