force-app/main/default/objects/Media__c/fields/Link_to_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Publisher__c</fullName>
    <label>Link to Publisher</label>
    <type>Url</type>
</CustomField>