force-app/main/default/objects/Media__c/fields/Live_Dates__c.field-meta.xml
<CustomField>
    <fullName>Live_Dates__c</fullName>
    <label>Live Dates</label>
    <length>30</length>
    <type>Text</type>
</CustomField>