force-app/main/default/objects/Media__c/fields/Live_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_End_Date__c</fullName>
    <label>Live End Date</label>
    <type>Date</type>
</CustomField>