force-app/main/default/objects/Media__c/fields/Live_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Start_Date__c</fullName>
    <label>Live Start Date</label>
    <type>Date</type>
</CustomField>