force-app/main/default/objects/Media__c/fields/Media_Kit_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_Kit_URL__c</fullName>
    <label>Media Kit URL</label>
    <type>Url</type>
</CustomField>