force-app/main/default/objects/Media__c/fields/Media_Location__c.field-meta.xml
<CustomField>
    <fullName>Media_Location__c</fullName>
    <label>Media Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campus Emails to Students</fullName>
            </value>
            <value>
                <fullName>Campus Newspaper</fullName>
            </value>
            <value>
                <fullName>Classroom/Academic Building</fullName>
            </value>
            <value>
                <fullName>Direct Mail Placement</fullName>
            </value>
            <value>
                <fullName>Housing Guide</fullName>
            </value>
            <value>
                <fullName>OOH On-Campus (ex: bus or Quad)</fullName>
            </value>
            <value>
                <fullName>Recreation Center</fullName>
            </value>
            <value>
                <fullName>Residence Hall</fullName>
            </value>
            <value>
                <fullName>Student Media&apos;s Social Platform</fullName>
            </value>
            <value>
                <fullName>Student Media Website</fullName>
            </value>
            <value>
                <fullName>Student Union</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>Campus Magazine</fullName>
            </value>
            <value>
                <fullName>Bus Shelters</fullName>
            </value>
            <value>
                <fullName>Parking Garage Wall Panels</fullName>
            </value>
            <value>
                <fullName>Interior Bus Cards</fullName>
            </value>
            <value>
                <fullName>Bus Tails</fullName>
            </value>
            <value>
                <fullName>Exterior Bus Cards</fullName>
            </value>
            <value>
                <fullName>Newspaper Kiosks/Ad Racks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>