force-app/main/default/objects/Media__c/fields/Media_Opportunity_Details__c.field-meta.xml
<CustomField>
    <fullName>Media_Opportunity_Details__c</fullName>
    <label>Media Opportunity Details</label>
    <type>TextArea</type>
</CustomField>