force-app/main/default/objects/Media__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>OOH Digital</fullName>
            </value>
            <value>
                <fullName>OOH</fullName>
            </value>
            <value>
                <fullName>OOH Transit</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>