force-app/main/default/objects/Media__c/fields/Non_University_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Non_University_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ex: MyMediaMate, City Transit Company, etc.</inlineHelpText>
    <label>Non-University Vendor</label>
    <type>Checkbox</type>
</CustomField>