force-app/main/default/objects/Media__c/fields/OnCampusMediaAssets__c.field-meta.xml
<CustomField>
    <fullName>OnCampusMediaAssets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Campus Media Assets</label>
    <referenceTo>Media__c</referenceTo>
    <relationshipLabel>Media</relationshipLabel>
    <relationshipName>Media</relationshipName>
    <type>Lookup</type>
</CustomField>