force-app/main/default/objects/Media__c/fields/Placement_through_NIRSA__c.field-meta.xml
<CustomField>
    <fullName>Placement_through_NIRSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement through NIRSA?</label>
    <type>Checkbox</type>
</CustomField>