force-app/main/default/objects/Media__c/fields/R_B_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>R_B_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R&amp;B Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Media (R&amp;B Coordinator)</relationshipLabel>
    <relationshipName>RBMediaPlacement</relationshipName>
    <type>Lookup</type>
</CustomField>