force-app/main/default/objects/Media__c/fields/R_B_Finance_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>R_B_Finance_Project_Number__c</fullName>
    <label>R&amp;B Finance Project Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>