force-app/main/default/objects/Media__c/fields/School_University__c.field-meta.xml
<CustomField>
    <fullName>School_University__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School/University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>On Campus Media</relationshipLabel>
    <relationshipName>OnCampusMedia</relationshipName>
    <type>Lookup</type>
</CustomField>