force-app/main/default/objects/Media__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>