force-app/main/default/objects/Media__c/fields/Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions__c</fullName>
    <label>Total Impressions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>