force-app/main/default/objects/Media__c/fields/Total_Reach__c.field-meta.xml
<CustomField>
    <fullName>Total_Reach__c</fullName>
    <label>Total Reach</label>
    <length>20</length>
    <type>Text</type>
</CustomField>