force-app/main/default/objects/Media__c/fields/Unique_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Unique_Visitors__c</fullName>
    <label>Unique Visitors</label>
    <length>20</length>
    <type>Text</type>
</CustomField>