force-app/main/default/objects/Media__c/recordTypes/On_Campus_Media_Assets.recordType-meta.xml
<RecordType>
    <fullName>On_Campus_Media_Assets</fullName>
    <active>true</active>
    <label>On Campus Media Assets</label>
</RecordType>