force-app/main/default/objects/Media__c/recordTypes/R_B_Media_Placements.recordType-meta.xml
<RecordType>
    <fullName>R_B_Media_Placements</fullName>
    <active>false</active>
    <label>R&amp;B Media Placements</label>
</RecordType>