force-app/main/default/objects/Media__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>School_University__c</columns>
    <columns>NAME</columns>
    <columns>OnCampusMediaAssets__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Media_Type__c</columns>
    <columns>Campus_Moment__c</columns>
    <columns>Reach__c</columns>
    <columns>Average_Impressions__c</columns>
    <columns>Cost_Per_Run__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Link_to_Publisher__c</columns>
    <columns>Is_this_a_special_edition_placement__c</columns>
    <columns>Is_this_a_freshman_focused_placement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Media__c.R_B_Media_Placements</value>
    </filters>
    <label>All</label>
</ListView>