force-app/main/default/objects/Media__c/listViews/Copy_of_Newly_Added.listView-meta.xml
<ListView>
    <fullName>Copy_of_Newly_Added</fullName>
    <columns>NAME</columns>
    <columns>R_B_Coordinator__c</columns>
    <columns>Media_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Creative_Due_Date__c</columns>
    <columns>Creative_File_Link__c</columns>
    <columns>Date_Invoice_Received__c</columns>
    <columns>Date_Submitted_for_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Media__c.R_B_Media_Placements</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Fall 2022</value>
    </filters>
    <label>Fall 2022 Media Tracker</label>
</ListView>