force-app/main/default/objects/Media__c/listViews/Testing.listView-meta.xml
<ListView>
    <fullName>Testing</fullName>
    <columns>School_University__c</columns>
    <columns>NAME</columns>
    <columns>Media_Type__c</columns>
    <columns>Media_Location__c</columns>
    <columns>Placement_Timing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Media__c.On_Campus_Media_Assets</value>
    </filters>
    <label>Testing</label>
</ListView>